alerts: fix whitespace added to new flash alerts

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -1340,7 +1340,6 @@
   }
   // Alerts -> Flash alerts.
   .flash-container {
-    margin-top: 8px !important;
     svg { v: white }
     .flash {
       &-action { c: white }
@@ -1348,6 +1347,7 @@
       &-notice { c: white 0 blue }
       &-success { c: white 0 green }
       &-warning { c: white 0 yellow }
+      &-content { margin-top: 8px !important }
       ../.sticky .flash-content { box-shadow: bsh }
     }
   }
